objects/TASKRAY__trBoardFilterUserJunction__c.object
<CustomObject>
    <fields>
        <fullName>TASKRAY__trBoardFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Filter</label>
        <referenceTo>TASKRAY__trBoardFilter__c</referenceTo>
        <relationshipName>UserJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBoardPowerFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board Filter</label>
        <referenceTo>TASKRAY__trBoardPowerFilter__c</referenceTo>
        <relationshipName>UserJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trSortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUniqueIdentifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TASKRAY__trUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TaskRay Filter User Settings</label>
    <listViews>
        <fullName>TASKRAY__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TaskRay Filter User Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Filter User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>